--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -3,7 +3,7 @@
 {% load render_turbo_reload_tag from gebruikers_tags %}
 <!DOCTYPE html>
 <html lang="nl">
-    <head>
+    <head data-controller="head">
         <meta charset="UTF-8">
         <meta name="git_sha" value="{{ GIT_SHA }}">
         <meta name="viewport"
@@ -39,6 +39,7 @@
               href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
         <script src="/static/rdam.geojson" type="text/javascript"></script>
         <meta name="turbo-cache-control" content="no-cache">
+        <meta name="git-sha" content="{{ GIT_SHA }}">
         <meta name="turbo-prefetch" content="false">
         {% block stylesheets %}
             <link rel="stylesheet"
@@ -47,7 +48,7 @@
                   crossorigin="" />
             <link href=" https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css "
                   rel="stylesheet">
-            {% render_bundle 'app' 'css' attrs='data-turbo-track="reload"' %}
+            {% render_bundle 'app' 'css' %}
         {% endblock stylesheets %}
         {% if DEBUG and LIVE_UPDATE %}
             <script>
@@ -70,11 +71,10 @@
         {% block javascripts %}
             <script src=" https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js "></script>
             <script src=" https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js "></script>
-            {% render_bundle 'app' 'js' attrs='data-turbo-track="reload"' %}
+            {% render_bundle 'app' 'js' attrs='data-head-target="mainScript"' %}
         {% endblock javascripts %}
         <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin="">
         </script>
-        {% render_turbo_reload_tag %}
     </head>
     <body class="{% block body_class %}{% endblock body_class %}"
           data-controller=" notificaties--manager notificaties--toast-manager focus-trap modal infosheet "
