--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -41,6 +41,8 @@ $gray-200: #eaeaea;
 $gray-400: #b7bdc7;
 $gray-600: #7f838a;
 $gray-800: #666666;
+$purple-200: #f5f0fa;
+$purple-800: #9e7ebc;
 
 $neutral-900: #244048;
 $neutral-600: #bfd2d9;
