--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -6,65 +6,73 @@
 <!-- djlint:on -->
 {% block content %}
 <div class="wrapper--actions">
-    {% melding_taken melding as taak_info %}
-    <p>
-        {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
-            <button type="button"
-                    class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
-                    data-action="modal#openModal"
-                    data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
-                <span>Melding afhandelen</span>
-            </button>
-        {% endif %}
-        {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
-        {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
-            <button type="button"
-                    class="btn btn-tertiary"
-                    data-action="modal#openModal"
-                    data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
-                <span>Melding heropenen</span>
-            </button>
-        {% endif %}
-    </p>
-    <ul class="list-links">
-        {% if taak_info.open_taken %}
-            {% if perms.authorisatie.taak_verwijderen %}
-                <li>
-                    <button type="button"
-                            class="btn btn-icon btn-textlink"
-                            data-action="modal#openModal"
-                            data-modal-action-param="{% url 'taak_verwijderen' melding.uuid %}">
-                        <svg width="18"
-                             height="18"
-                             viewBox="0 0 18 18"
-                             fill="none"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
-                        </svg>
-                        Taak verwijderen
-                    </button>
-                </li>
+    <div class="container__uitklapper">
+        <span>{% include "icons/dots.svg" %}</span>
+        <div class="legenda">
+            {% melding_taken melding as taak_info %}
+            {% if not melding.afgesloten_op %}
+                <ul class="list-clean">
+                    <li>
+                        {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                            <button type="button"
+                                    class="btn btn-icon"
+                                    data-action="modal#openModal"
+                                    data-modal-action-param="{% url 'melding_pauzeren' melding.uuid %}">
+                                    {% include "icons/pause_circle.svg" %}
+                                Melding pauzeren
+                            </button>
+                        {% endif %}
+                    </li>
+                    <li>
+                        {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+                            <button type="button"
+                                    class="btn btn-icon"
+                                    data-action="modal#openModal"
+                                    data-modal-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
+                                    {% include "icons/warning_triangle.svg" %}
+                                {% if melding.urgentie >= 0.5 %}Spoedstatus verwijderen{% else %}Spoedstatus toevoegen{% endif %}
+                            </button>
+                        {% endif %}
+                    </li>
+                    <li>
+                        {% if perms.authorisatie.melding_annuleren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                            <button type="button"
+                                    class="btn btn-icon"
+                                    data-action="modal#openModal"
+                                    data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
+                                    {% include "icons/bin.svg" %}
+                                Melding annuleren
+                            </button>
+                        {% endif %}
+                    </li>
+                </ul>
             {% endif %}
-        {% endif %}
-        {% if not melding.afgesloten_op %}
-            {% if perms.authorisatie.melding_annuleren %}
-            <li>
-                <button type="button"
-                        class="btn btn-icon btn-textlink"
-                        data-action="modal#openModal"
-                        data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
-                    <svg width="18"
-                            height="18"
-                            viewBox="0 0 18 18"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
-                    </svg>
-                    Melding annuleren
-                </button>
-            </li>
-            {% endif %}
-        {% endif %}
-    </ul>
+        </div>
+    </div>
+    {% if perms.authorisatie.melding_hervatten and melding.status.naam == "pauze" or melding.status.naam == "wachten_melder" %}
+        <button type="button"
+                class="btn btn-tertiary"
+                data-action="modal#openModal"
+                data-modal-action-param="{% url 'melding_hervatten' melding.uuid %}">
+            <span>Hervatten</span>
+        </button>
+    {% endif %}
+    {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
+        <button type="button"
+                class="btn btn-tertiary"
+                data-action="modal#openModal"
+                data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+            <span>Melding afhandelen</span>
+        </button>
+    {% endif %}
+    {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
+    {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
+        <button type="button"
+                class="btn btn-tertiary"
+                data-action="modal#openModal"
+                data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
+            <span>Melding heropenen</span>
+        </button>
+    {% endif %}
 </div>
 {% endblock content %}
