--- a/app/apps/context/templates/benc/melding_detail_titel.html
+++ b/app/apps/context/templates/benc/melding_detail_titel.html
@@ -1,4 +1,5 @@
 {% load vind_in_dict from querystring_tags %}
+{% load vertaal from vertaal_tags %}
 {% with grafnummer=melding.locaties_voor_melding.0.grafnummer vak=melding.locaties_voor_melding.0.vak plaats=melding.locaties_voor_melding.0.begraafplaats %}
     <h1>
         {% if grafnummer %}Grafnummer {{ grafnummer }}{% endif %}
@@ -11,6 +12,16 @@
             {% else %}
                 {{ signaal_begraafplaats_naam }}
             {% endif %}
+        {% endif %}
+        {% if melding.status %}
+            <span class="tag tag--qualification {% if melding.status.naam == 'afgehandeld' %}tag--voltooid{% elif melding.status.naam == 'controle' %}tag--controle{% elif melding.status.naam == 'in_behandeling' %}tag--voltooid{% elif melding.status.naam == 'geannuleerd' %}tag--geannuleerd{% endif %}">{{ melding.status.naam|vertaal }}
+                {% if melding.status.naam == 'afgehandeld' or melding.status.naam == 'geannuleerd' %}
+                    ({{ melding.resolutie }})
+                {% endif %}
+            </span>
+        {% endif %}
+        {% if melding.urgentie >= 0.5 %}
+            <span class="tag tag--qualification tag--spoed">Spoed</span>
         {% endif %}
     </h1>
 {% endwith %}
