--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -66,9 +66,7 @@
                                         </div>
                                     </div>
                                     <div class="grid-item aside">
-                                        <div class="container__actions"
-                                            data-detail-target="containerActions"
-                                            id="melding_detail_acties">
+                                        <div class="container__actions" data-detail-target="containerActions">
                                             <div class="wrapper">
                                                 <div class="container__meldingnavigatie">
                                                     {% if meldingen_index %}
@@ -79,7 +77,7 @@
                                                         </div>
                                                     {% endif %}
                                                 </div>
-                                                {% include acties_template with disable_stream=True %}
+                                                <div id="melding_detail_acties">{% include acties_template with disable_stream=True %}</div>
                                             </div>
                                         </div>
                                     </div>
