Styling top-bar and melding-navigatie

--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -80,6 +80,10 @@
     h1 & {
         vertical-align: middle;
         transform: translateY(-0.2vw);
+
+        &:first-of-type {
+            margin-left: 6px;
+        }
     }
 
     &--qualification {
