--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -61,7 +61,6 @@
         }
     }
 
-    .container__meldingnavigatie,
     .wrapper--actions {
         box-sizing: border-box;
     }
@@ -126,10 +125,12 @@
     margin-top: -15px;
     width: calc(100% - 257px);
     transition: width $transition-duration-default $transition-ease-default;
+    box-sizing: content-box;
 
     @media (min-width: map-get($grid-breakpoints, md)) {
         position: fixed;
-        top: 75px;
+        top: 0;
+        padding-top: 90px;
         z-index: 25;
         justify-content: flex-end;
         background-color: $blue-100;
@@ -240,14 +241,15 @@
     }
 }
 
+// TODO Meldingnavigatie valt achter de topbar
 .container__meldingnavigatie {
     display: flex;
     justify-content: flex-end;
     gap: 8px;
     min-width: 182px;
-    position: absolute;
-    top: calc(-100% + 4px);
-    right: 100px;
+    position: fixed;
+    top: 14px;
+    right: 140px;
 
     span,
     a {
