--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -37,7 +37,7 @@ html {
         box-sizing: border-box;
         transition: width $transition-duration-default $transition-ease-default;
         position: fixed;
-        top: 0;
+        top: 75;
         left: 0;
         border-right: 1px solid $green-400;
 
@@ -62,6 +62,11 @@ html {
             left: 0;
             z-index: 30;
             box-sizing: border-box;
+            pointer-events: none;
+
+            .container__user {
+                pointer-events: all;
+            }
         }
         main {
             padding: 1em 0.75em 0;
