--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -17,6 +17,7 @@
                 white-space: nowrap;
                 margin: 0;
                 line-height: 60px;
+                pointer-events: all;
 
                 a {
                     text-decoration: none;
@@ -31,7 +32,7 @@
         }
 
         .container__user {
-            padding: 12px 0.5em 0 0;
+            padding: 12px 20px 0 0;
             display: flex;
 
             .container__uitklapper {
