--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -123,7 +123,7 @@
     background-color: $blue-100;
     padding-top: 15px;
     margin-top: -15px;
-    width: calc(100% - 257px);
+    width: 100%;
     transition: width $transition-duration-default $transition-ease-default;
     box-sizing: content-box;
 
@@ -134,14 +134,15 @@
         z-index: 25;
         justify-content: flex-end;
         background-color: $blue-100;
+        width: calc(100% - 257px);
 
         .wrapper--actions {
             width: 100%;
         }
-    }
 
-    .nav--small & {
-        width: calc(100% - 90px);
+        .nav--small & {
+            width: calc(100% - 90px);
+        }
     }
 }
 
@@ -247,9 +248,11 @@
     justify-content: flex-end;
     gap: 8px;
     min-width: 182px;
-    position: fixed;
-    top: 14px;
-    right: 140px;
+    @media (min-width: map-get($grid-breakpoints, md)) {
+        position: fixed;
+        top: 14px;
+        right: 140px;
+    }
 
     span,
     a {
