--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -26,8 +26,12 @@
             }
             h2 {
                 font-size: 1.2em;
-                margin: 0 0 0 227px;
+                margin: 0;
                 line-height: 60px;
+
+                @media (min-width: map-get($grid-breakpoints, md)) {
+                    margin: 0 0 0 227px;
+                }
             }
         }
 
