--- a/app/apps/main/templates/melding/detail/locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/detail/locatie_aanpassen.html
@@ -106,7 +106,7 @@
                                     {% if locatie.toevoeging %}{{ locatie.toevoeging }}{% endif %}
                                 {% endif %}
                                 <br>
-                                {{ locatie.wijknaam }} {{ locatie.buurtnaam }}
+                                {{ locatie.wijknaam }} {{ locatie.buurtnaam }}, {{ locatie.plaatsnaam }}
                                 <br>
                                 <small><span data-locatieaanpassenformulier-target="currentAddressDistance"></span> meter vanaf huidige locatie</small>
                             </p>
