--- a/app/apps/main/templates/melding/melding_detail_locaties_adres.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_adres.html
@@ -37,5 +37,15 @@
                 {% endif %}
             </dd>
         </div>
+        <div>
+            <dt>Plaatsnaam</dt>
+            <dd>
+                {% if locatie.plaatsnaam %}
+                    {{ locatie.plaatsnaam }}
+                {% else %}
+                    onbekend
+                {% endif %}
+            </dd>
+        </div>
     </dl>
 </div>
