--- a/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
@@ -43,7 +43,7 @@
     </div>
 </div>
 <div class="container__map">
-    <div data-detail-target="kaartDefault">
+    <div class="wrapper__map" data-detail-target="kaartDefault">
         <div class="map"
              id="incidentMap"
              data-action="touchstart->detail#onTwoFingerDrag touchend->detail#onTwoFingerDrag">
