--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -16,8 +16,12 @@
                 font-size: 1.2em;
                 white-space: nowrap;
                 margin: 0;
-                line-height: 60px;
+                line-height: 59px;
                 pointer-events: all;
+                text-align: left;
+                min-width: 50%;
+                background-color: $blue-100;
+                z-index: -1;
 
                 a {
                     text-decoration: none;
