--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -6,11 +6,11 @@
 <!-- djlint:on -->
 {% block content %}
 <div class="wrapper--actions">
+    {% if not melding.afgesloten_op %}
     <div class="container__uitklapper">
         <span>{% include "icons/dots.svg" %}</span>
         <div class="legenda">
             {% melding_taken melding as taak_info %}
-            {% if not melding.afgesloten_op %}
                 <ul class="list-clean">
                     <li>
                         {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
@@ -46,15 +46,15 @@
                         {% endif %}
                     </li>
                 </ul>
-            {% endif %}
         </div>
     </div>
+    {% endif %}
     {% if perms.authorisatie.melding_hervatten and melding.status.naam == "pauze" or melding.status.naam == "wachten_melder" %}
         <button type="button"
                 class="btn btn-tertiary"
                 data-action="modal#openModal"
                 data-modal-action-param="{% url 'melding_hervatten' melding.uuid %}">
-            <span>Hervatten</span>
+            <span>Melding hervatten</span>
         </button>
     {% endif %}
     {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
