--- a/app/apps/context/templates/standaard/melding_detail_titel.html
+++ b/app/apps/context/templates/standaard/melding_detail_titel.html
@@ -14,10 +14,8 @@
         {% endif %}
     {% endwith %}
     {% if melding.status %}
-        <span class="tag tag--qualification {% if melding.status.naam == 'afgehandeld' %}tag--voltooid{% elif melding.status.naam == 'controle' %}tag--controle{% elif melding.status.naam == 'in_behandeling' %}tag--voltooid{% elif melding.status.naam == 'geannuleerd' %}tag--geannuleerd{% endif %}">{{ melding.status.naam|vertaal }}
-            {% if melding.status.naam == 'afgehandeld' or melding.status.naam == 'geannuleerd' %}
-                ({{ melding.resolutie }})
-            {% endif %}
+        <span class="tag tag--qualification {% if melding.status.naam == 'afgehandeld' %}tag--voltooid{% elif melding.status.naam == 'controle' %}tag--controle{% elif melding.status.naam == 'in_behandeling' %}tag--voltooid{% elif melding.status.naam == 'geannuleerd' %}tag--geannuleerd{% endif %}">
+            {{ melding.status.naam|vertaal }}
         </span>
     {% endif %}
     {% if melding.urgentie >= 0.5 %}
