--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -76,6 +76,7 @@
             cursor: pointer;
             margin-right: 12px;
             position: relative;
+            z-index: 20;
 
             > span {
                 display: block;
