--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -34,7 +34,7 @@ $red-200: #fcf0f0;
 $red-400: #ffd5d5;
 $red-900: #d22d1f;
 $blue-100: #f7f9fa;
-$blue-200: #eaeef1;
+$blue-200: #e5eeff;
 $blue-900: #104ccb;
 $gray-100: #f4f4f5;
 $gray-200: #eaeaea;
