Put title in stream template

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -60,7 +60,9 @@
                                             Terug
                                         </a>
                                         {% include "melding/melding_gebruiker_actief.html" %}
-                                        {% include titel_template %}
+                                        <div id="melding_detail_titel">
+                                            {% include titel_template %}
+                                        </div>
                                     </div>
                                     <div class="item aside">
                                         <div class="container__actions" data-detail-target="containerActions">
