Refactoring melding-titel templates

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -61,7 +61,7 @@
                                         </a>
                                         {% include "melding/melding_gebruiker_actief.html" %}
                                         <div id="melding_detail_titel">
-                                            {% include titel_template %}
+                                             {% include "melding/detail/melding_detail_titel.html" %}
                                         </div>
                                     </div>
                                     <div class="item aside">
